# jinzhao-attest

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  main.cc
bazel/: BUILD.bazel  cppcodec.BUILD  curl.BUILD  jinzhao_attest.bzl  openssl.BUILD  rapidjson.BUILD  repositories.bzl  unified_attestation.BUILD  zlib.BUILD
bazel/patches/: grpc-v1.45.2.patch
